added support for multiple files

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,13 +4,16 @@
     <body>
         <h1>Liv.ai Test (Supported formats- .mp3 , .wav)</h1>
          <form method="post" action="" enctype="multipart/form-data">
-            <input type="file" name="audio" accept="audio/*">
+            <input type="file" name="audio" accept="audio/*" multiple>
             <input type="submit">
             {% csrf_token %}
         </form>
 
         <br><br>
         <br>Transcript:- <br><br>
-        {{result}}
+        {% for result in results %}
+             {{result}}
+             <br><br>
+        {% endfor %}
     </body>
 </html>
